@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.259 2010/01/13 03:36:27 sfeam Exp $
+dnl $Id: configure.in,v 1.260 2010/01/16 06:21:01 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to
@@ -28,7 +28,7 @@ AC_PROG_CPP
 AC_C_CONST
 AC_C_INLINE
 AC_C_STRINGIZE
-
+AC_PROG_LN_S
 
 if test "${build}" != "${host}"
 then
